feat: implementação de Classes Anónimas JIT e Polimorfismo de Contratos
Esta atualização eleva o motor a um nível de arquitetura empresarial, permitindo
a injeção de dependências estrita e a criação dinâmica de classes em tempo de execução.

Principais Alterações:
* AST & Parser:
  - Expandido o nó `Expr.New` para suportar a captura de blocos de métodos (`anonymousMethods`).
  - Atualizado o `Parser` para consumir corpos de classes anónimas on-the-fly (`new CRUD() { ... }`).
  - Corrigido um bug de loop infinito no consumo de decoradores (check vs match).

* Interpreter (Runtime):
  - Injeção da fábrica JIT no `visitNewExpr` para sintetizar Modelos Fantasmas na RAM, aplicando rigorosamente as regras de @Override e validação de contratos.
  - Atualizada a Alfândega Quântica (`checkTypeMatch`) para suportar verdadeiro Polimorfismo de Interfaces: parâmetros tipados como contratos (ex: `fun(alvo: CRUD)`) aceitam agora qualquer classe ou variante que os implemente.